# torngen_python_client

./: .gitignore  README.md  example.md  openapi.json  pyproject.toml
.github/workflows/: pdoc.yml  tag-merged.yml  torngen.yml
src/: __init__.py  base_path.py  base_query.py  base_schema.py  parameter.py
src/path/: faction.py  faction_chainId.py  faction_crimeId.py  faction_id.py  faction_raidWarId.py  faction_rankedWarId.py  faction_territoryWarId.py  forum.py  forum_categoryIds.py  forum_threadId.py  key.py  market.py  market_id.py  racing.py  racing_raceId.py  racing_trackId.py  torn.py  torn_crimeId.py  torn_ids.py  torn_logCategoryId.py  user.py  user_crimeId.py  user_id.py
src/schema/: AmmoId.py  AttackCode.py  AttackLogResponse.py  AttackPlayerSimplified.py  AttackSimplified.py  BazaarBargainSales.py  BazaarDollarSales.py  BazaarResponse.py  ChainId.py  CountryEnum.py  DirtyBombId.py  EducationId.py  FactionApplication.py  FactionAttackResult.py  FactionAttacksFullResponse.py  FactionBranchDetails.py  FactionBranchStateEnum.py  FactionChain.py  FactionChainReport.py  FactionChainReportAttacker.py  FactionChainReportAttackerRespect.py  FactionChainReportDetails.py  FactionChainReportResponse.py  FactionChainWarfare.py  FactionContributorsResponse.py  FactionCrime.py  FactionCrimeId.py  FactionCrimeReward.py  FactionCrimeSlot.py  (+153 more)
tests/: conftest.py  test_fuzzy_parsing.py  test_parsing.py  test_parsing_auto.py  test_query_builder.py
torngen/: __init__.py  adapter.py  base_path.py  base_query.py  base_schema.py  mix.exs  parameter.py
torngen_ex/: mix.exs
(+894 files in other folders)
