[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["torngen/"]

[project]
name = "torngen_python_client"
dynamic = ["version"]
readme = "README.md"
license = "Apache-2.0"

[project.optional-dependencies]
test = ["pytest", "pytest-sugar", "requests", "hypothesis"]
